--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,7 +9,7 @@ jobs:
           name: "Install Deps"
           command: |
             dpkg --add-architecture i386
-            apt-get update && apt-get install -y g++-multilib gcc-multilib libc6-dev-i386 lib1g-dev zlib1g-dev:i386
+            apt-get update && apt-get install -y g++-multilib gcc-multilib libc6-dev-i386 zlib1g-dev zlib1g-dev:i386
             wget -O premake.tar.gz "https://github.com/premake/premake-core/releases/download/v5.0.0-alpha14/premake-5.0.0-alpha14-linux.tar.gz"
             tar xvzf premake.tar.gz
             ./premake5 --os=linux --file=BuildProjects.lua gmake
